# opencargo

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  Tiltfile  config.example.toml
.github/workflows/: ci.yml  release.yml
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: index.tsx
frontend/src/components/: Badge.tsx  CommandPalette.tsx  CopyButton.tsx  CountUp.tsx  DataTable.tsx  EmptyState.tsx  Icon.tsx  Layout.tsx  LoadingSpinner.tsx  Modal.tsx  PermissionMatrix.tsx  RoleBadge.tsx  SearchInput.tsx  Sidebar.tsx  StatsCard.tsx  Toast.tsx  Toaster.tsx  bits.tsx  guards.tsx
frontend/src/core/: api.ts  format.ts  http.ts  token.ts  types.ts  ws.ts
frontend/src/lib/: api.ts  auth.ts
frontend/src/pages/: Dashboard.tsx  GoModules.tsx  Login.tsx  MyAccess.tsx  OciImages.tsx  PackageDetail.tsx  Packages.tsx  Search.tsx
frontend/src/styles/: global.css
helm/opencargo/: Chart.yaml  values.yaml
helm/opencargo/templates/: configmap.yaml  deployment.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml
k8s/: configmap.yaml  deployment.yaml  kustomization.yaml  pvc.yaml  service.yaml
k8s/sidecar/: README.md  configmap.yaml  github-actions-example.yaml  gitlab-ci-example.yaml  sidecar-deployment.yaml
src/: config.rs  error.rs  events.rs  lib.rs  main.rs  server.rs
src/api/: audit.rs  dashboard.rs  deps.rs  me.rs  mod.rs  permissions.rs  promote.rs  repositories.rs  tokens.rs  users.rs  vulns.rs  webhooks.rs  ws.rs
src/auth/: middleware.rs  mod.rs  permissions.rs  rate_limit.rs  tokens.rs  users.rs
src/db/: mod.rs  oci.rs
src/db/migrations/: 001_initial.sql  (+10 more)
src/proxy/: mod.rs
src/registry/: mod.rs
src/storage/: filesystem.rs  mod.rs
src/telemetry/: cleanup.rs  http_metrics.rs  metrics.rs  mod.rs  vulns.rs  webhooks.rs
src/web/: mod.rs
tests/: auth_test.rs  deps_test.rs  docker_e2e_test.rs  e2e_scoped_test.rs  features_test.rs  go_test.rs  npm_test.rs  oci_test.rs  permissions_test.rs  pnpm_e2e_test.rs  promote_test.rs  proxy_test.rs  tls_test.rs  vuln_test.rs  webhook_test.rs
(+17 files in other folders)
